public class MallardDuck extends Duck {
    @Override
    void display() {
        System.out.println("I'm special MallardDuck!");
    }
}
