public class MuteQuack implements QuackBehavior {
    @Override
    public void quark() {
        System.out.println("Shii.....");
    }
}
