public class Quack implements QuackBehavior {
    @Override
    public void quark() {
        System.out.println("Quack Quack!!");
    }
}
