public interface QuackBehavior {
    void quark();
}
