public class Squeak implements QuackBehavior {
    @Override
    public void quark() {
        System.out.println("Squeak Squeak!!!");
    }
}
